flux/manifests/zipline/zipline-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipline-ingress
  namespace: zipline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - files.macks.cloud
    secretName: zipline-tls
  rules:
  - host: files.macks.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zipline
            port:
              number: 3000
